--- a/src/css/team-24/room-desc.css
+++ b/src/css/team-24/room-desc.css
@@ -18,15 +18,11 @@
 }
 .room-desc-title{
     font-family: 'Times New Roman';
-    font-weight: 700;
     font-size: 24px;
     line-height: 1.16;
     margin-bottom: 16px;
 }
 .room-desc-text{
-    font-weight: 700;
-    line-height: 1.25;
-    letter-spacing: 0.02em;
     color: var(--text-one-color);
     margin-bottom: 16px;
 }
@@ -38,8 +34,6 @@
 }
 .room-desc-link-text{
     font-weight: 500;
-    line-height: 1.25;
-    letter-spacing: 0.02em;
     color: var(--text-two-color);
 }
 .room-desc-button{
@@ -52,7 +46,7 @@
     line-height: 1.2;
     padding-top: 20px;
     padding-bottom: 20px;
-    
+    transition: background-color 250ms cubic-bezier(0.47, 0, 0.745, 0.715), border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .room-desc-button:hover, .room-desc-button:active, .room-desc-button:focus{
     background-color: var(--akzent-yellow);
